:lipstick: Update entire design

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -91,6 +91,7 @@ video {
   font: inherit;
   vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -105,21 +106,26 @@ nav,
 section {
   display: block;
 }
+
 body {
   line-height: 1;
   color: #555;
   font-family: 'Nanum Gothic', sans-serif;
   font-weight: 300;
   overflow-x: hidden;
+  box-sizing: border-box;
 }
+
 ol,
 ul {
   list-style: none;
 }
+
 blockquote,
 q {
   quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
@@ -127,6 +133,7 @@ q:after {
   content: "";
   content: none;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
